--- a/flappy/makefile
+++ b/flappy/makefile
@@ -1,7 +1,7 @@
-CPP=gcc    #Commande du compilateur
+CPP=gcc   #Commande du compilateur
 CFLAGS=-O3 #Option d'optimisation du programme
 # LDFLAGS=-lSDL2 -lSDL2_mixer #Linker
-LDFLAGS=-lSDL -lSDL_mixer -lSDL_image -lSDL_ttf#Linker
+LDFLAGS=-lSDL -lSDL_mixer -lSDL_image -lSDL_ttf -lm#Linker
 
 OBJS=play.o test.o
 
@@ -12,14 +12,11 @@ all:
 -include $(OBJS:.o=.d)
 
 play: play.o lib_flappy/lib_flappy.a
-	$(CPP) $(CFLAGS) -o play play.o lib_flappy/lib_flappy.a $(LDFLAGS)
-
-test: test.o lib_flappy/lib_flappy.a
-	$(CPP) $(CFLAGS) -o test test.o lib_flappy/lib_flappy.a $(LDFLAGS) -lcurses
+	$(CPP) -g $(CFLAGS) -o play play.o lib_flappy/lib_flappy.a $(LDFLAGS)
 
 %.o: %.c
-	$(CPP) $(CFLAGS) -c $*.c
-	$(CPP) -MM $*.c > $*.d
+	$(CPP) -g $(CFLAGS) -c $*.c
+	$(CPP) -g -MM $*.c > $*.d
 
 clean:
 	rm -fr *.o *.d play test
